samples/_failures_safe/1761605318_3a8633_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_731b407b.c: In function ‘get_user_choice’:
./samples/SAFE/__tmp_731b407b.c:144:12: error: missing terminating " character
  144 |     printf("
      |            ^
./samples/SAFE/__tmp_731b407b.c:144:5: error: expected expression at end of input
  144 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_731b407b.c:144:5: error: expected declaration or statement at end of input
